improved mobile version

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 <div class="impact-grid-top">
                     <div class="impact-card primary" data-aos="zoom-in" data-aos-delay="100">
                         <div class="impact-icon"><i class="fas fa-chart-line"></i></div>
-                        <h3><span data-count="4215">0</span>+</h3>
+                        <h3><span data-count="4215">0</span><span style="white-space: nowrap;">+</span></h3>
                         <p data-translate="impact.consultations">consultații individuale</p>
                     </div>
                     <div class="impact-card primary" data-aos="zoom-in" data-aos-delay="200">
                         <div class="impact-icon"><i class="fas fa-graduation-cap"></i></div>
-                        <h3><span data-count="7733">0</span>+</h3>
+                        <h3><span data-count="7733">0</span><span style="white-space: nowrap;">+</span></h3>
                         <p data-translate="impact.beneficiaries">beneficiari instruiți</p>
                     </div>
                     <div class="impact-card primary" data-aos="zoom-in" data-aos-delay="300">
@@ -94,7 +94,7 @@
                         </div>
                         <div class="impact-stats">
                             <div class="stat-item">
-                                <strong data-count="82">0</strong>+
+                                <strong data-count="82">0<span style="white-space: nowrap;">+</span></strong>
                                 <span data-translate="impact.applications">dosare procesate</span>
                             </div>
                             <div class="stat-item">
@@ -102,7 +102,7 @@
                                 <span data-translate="impact.projects">proiecte finanțate</span>
                             </div>
                             <div class="stat-item">
-                                <strong data-count="450">0</strong>+
+                                <strong data-count="450">0<span style="white-space: nowrap;">+</span></strong>
                                 <span data-translate="impact.jobs">locuri de muncă</span>
                             </div>
                             <div class="stat-item">
@@ -208,11 +208,7 @@
                         <h3><span data-translate="partners.projects">Proiecte și propuneri de</span> ~<span data-count="70">0</span> <span data-translate="partners.million">milioane lei</span></h3>
                     </div>
                 </div>
-                <div class="partners-list" data-aos="fade-up" data-aos-delay="300">
-                    <h3 data-translate="partners.european_programs">Programe europene:</h3>
-                    <p data-translate="partners.european_list">EUroBRIDGE_UA_MD, PNUD – Comunități reziliente, SOCIALCAP, DIGICROSS, CEDDI, GrowthUP Chișinău, GEN-E, ș.a.</p>
-                </div>
-                
+
                 <!-- Partners Logo Slider -->
                 <div class="partners-slider-container" data-aos="fade-up" data-aos-delay="400">
                     <h3 data-translate="partners.internal_partners" style="text-align: center; margin-bottom: 2rem;">Parteneri interni:</h3>
@@ -270,7 +266,7 @@
         <section class="final-cta" data-aos="fade-up">
             <div class="container">
                 <h2 data-aos="zoom-in" data-translate="cta.title">Vrei să lansezi sau să dezvolți o afacere în Chișinău?</h2>
-                <a href="https://startup.chisinau.md" target="_blank" class="btn btn-primary btn-large" data-aos="zoom-in" data-aos-delay="200" data-translate="cta.button">Completează dosarul STARTUP pentru TINERI și MIGRANȚI</a>
+                <a href="https://startup.chisinau.md/finantarea/" target="_blank" class="btn btn-primary btn-large" data-aos="zoom-in" data-aos-delay="200" data-translate="cta.button">Completează dosarul STARTUP pentru TINERI și MIGRANȚI</a>
             </div>
         </section>
     </main>
