--- a/parteneri.html
+++ b/parteneri.html
@@ -63,7 +63,7 @@
                     <div class="partner-stat-card" data-aos="zoom-in" data-aos-delay="300">
                         <div class="stat-icon"><i class="fas fa-handshake"></i></div>
                         <h2>15+</h2>
-                        <p>Programe active</p>
+                        <p data-translate="partners_page.active_programs">Programe active</p>
                     </div>
                 </div>
             </div>
