--- a/contacte.html
+++ b/contacte.html
@@ -85,7 +85,7 @@
                             <div class="contact-icon"><i class="fas fa-clock"></i></div>
                             <div class="contact-details">
                                 <h3 data-translate="contact_page.schedule">Program de lucru</h3>
-                                <p>Luni – Vineri: 08:00 – 17:00</p>
+                                <p data-translate="contact_page.schedule_hours">Luni – Vineri: 08:00 – 17:00</p>
                             </div>
                         </div>
 
@@ -109,89 +109,64 @@
                         <h2 data-aos="fade-down" data-aos-delay="100" data-translate="contact_page.send_message">Trimite-ne un mesaj</h2>
                         <form id="contact-form" class="contact-form" data-aos="fade-up" data-aos-delay="200">
                             <div class="form-group">
-                                <label for="name">Nume complet *</label>
+                                <label for="name"><span data-translate="contact_page.form.full_name">Nume complet</span> *</label>
                                 <input type="text" id="name" name="name" required>
                             </div>
 
                             <div class="form-group">
-                                <label for="email">Email *</label>
+                                <label for="email"><span data-translate="contact_page.form.email">Email</span> *</label>
                                 <input type="email" id="email" name="email" required>
                             </div>
 
                             <div class="form-group">
-                                <label for="phone">Telefon</label>
+                                <label for="phone" data-translate="contact_page.form.phone">Telefon</label>
                                 <input type="tel" id="phone" name="phone">
                             </div>
 
                             <div class="form-group">
-                                <label for="request-type">Tip solicitare</label>
+                                <label for="request-type" data-translate="contact_page.form.request_type">Tip solicitare</label>
                                 <select id="request-type" name="request-type">
-                                    <option value="">Selectează tipul solicitării</option>
-                                    <option value="consultanta">Consultanță</option>
-                                    <option value="startup">Program STARTUP</option>
-                                    <option value="incubator">Incubator</option>
-                                    <option value="parteneriate">Parteneriate</option>
-                                    <option value="altele">Altele</option>
+                                    <option value="" data-translate="contact_page.form.select_type">Selectează tipul solicitării</option>
+                                    <option value="consultanta" data-translate="contact_page.form.consulting">Consultanță</option>
+                                    <option value="startup" data-translate="contact_page.form.startup_program">Program STARTUP</option>
+                                    <option value="incubator" data-translate="contact_page.form.incubator">Incubator</option>
+                                    <option value="parteneriate" data-translate="contact_page.form.partnerships">Parteneriate</option>
+                                    <option value="altele" data-translate="contact_page.form.other">Altele</option>
                                 </select>
                             </div>
 
                             <div class="form-group">
-                                <label for="message">Mesaj *</label>
+                                <label for="message"><span data-translate="contact_page.form.message">Mesaj</span> *</label>
                                 <textarea id="message" name="message" rows="6" required></textarea>
                             </div>
 
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary">Trimite mesajul</button>
+                                <button type="submit" class="btn btn-primary" data-translate="contact_page.form.send_button">Trimite mesajul</button>
                             </div>
                         </form>
 
                         <div id="form-message" class="form-message" style="display: none;">
                             <div class="success-message">
                                 <span class="success-icon">✓</span>
-                                <p>Mesajul tău a fost trimis cu succes! Te vom contacta în curând.</p>
+                                <p data-translate="contact_page.form.success_message">Mesajul tău a fost trimis cu succes! Te vom contacta în curând.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="map-section">
-                    <h2 data-aos="fade-down" data-aos-delay="100">Locație</h2>
-                    <div class="map-placeholder" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="map-content">
-                            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                                <circle cx="12" cy="10" r="3"></circle>
-                            </svg>
-                            <p>Aici va fi integrată o hartă (Google Maps / OpenStreetMap) cu locația CMDA.</p>
-                            <address>
-                                bd. Ștefan cel Mare și Sfânt, 132<br>
-                                MD-2012, mun. Chișinău
-                            </address>
-                        </div>
+                    <h2 data-aos="fade-down" data-aos-delay="100" data-translate="contact_page.location">Locație</h2>
+                    <div class="map-container" data-aos="zoom-in" data-aos-delay="200">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2719.2815!2d28.836038405024823!3d47.02306431222359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDAxJzIzLjAiTiAyOMKwNTAnMDkuNyJF!5e0!3m2!1sen!2s!4v1700000000000!5m2!1sen!2s"
+                            width="100%"
+                            height="450"
+                            style="border:0;"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="quick-links-section">
-            <div class="container">
-                <h2 data-aos="fade-down" data-aos-delay="100">Linkuri utile</h2>
-                <div class="quick-links-grid">
-                    <a href="programe.html" class="quick-link-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="quick-link-icon"><i class="fas fa-book"></i></div>
-                        <h3>Programe disponibile</h3>
-                        <p>Vezi toate programele de suport</p>
-                    </a>
-                    <a href="infrastructura.html" class="quick-link-card" data-aos="fade-up" data-aos-delay="300">
-                        <div class="quick-link-icon"><i class="fas fa-building"></i></div>
-                        <h3>Infrastructură</h3>
-                        <p>Incubator și platformă industrială</p>
-                    </a>
-                    <a href="https://startup.chisinau.md" target="_blank" class="quick-link-card" data-aos="fade-up" data-aos-delay="400">
-                        <div class="quick-link-icon"><i class="fas fa-rocket"></i></div>
-                        <h3>Aplică online</h3>
-                        <p>Completează dosarul pe platformă</p>
-                    </a>
                 </div>
             </div>
         </section>
